Base Devcontainer Updates  (#15)
* initial commit for Devcontainer Base Image

* add devcontainer

* update base image

* remove automatic builds in favor of rake tasks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,3 +69,9 @@ services:
       MARIADB_REPLICATION_PASSWORD: replica
     volumes:
       - ./volumes/mysql-10:/bitnami/mariadb/data
+  dev:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    volumes:
+      - ~/.config/gh:/root/.config/gh:cached
